--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -24,6 +24,12 @@
            value="{{ csrf_token('authenticate') }}"
     >
 
+    <div class="checkbox">
+        <label>
+            <input type="checkbox" id="remember_me" name="_remember_me"> Se souvenir de moi
+        </label>
+    </div>
+
     <button class="btn btn-lg btn-primary" type="submit">
         Sign in
     </button>
