user form on editprofil is working with changes on database

--- a/templates/user/modifprofil.html.twig
+++ b/templates/user/modifprofil.html.twig
@@ -1,8 +1,18 @@
 {% extends 'base.html.twig'%}
 
 {%block body%}
+
+
+
     <div>
-        {{ form(userForm) }}
+        {{ form_start(userForm) }}
+
+        {{ form_widget(userForm) }}
+
+        <button> Submit </button>
+
+        {{ form_start(userForm) }}
+
     </div>
 {% endblock %}
 
