--- a/templates/user/modifprofil.html.twig
+++ b/templates/user/modifprofil.html.twig
@@ -8,10 +8,14 @@
         {{ form_start(userForm) }}
 
         {{ form_widget(userForm) }}
+        {{ form_row(form.username) }}
+        {{ form_row(form.password.first) }}
+        {{ form_row(form.password.second) }}
 
-        <button> Submit </button>
+        <button type="submit">Register!</button>
 
-        {{ form_start(userForm) }}
+
+        {{ form_end(userForm) }}
 
     </div>
 {% endblock %}
