--- a/templates/user/modifprofil.html.twig
+++ b/templates/user/modifprofil.html.twig
@@ -8,14 +8,10 @@
         {{ form_start(userForm) }}
 
         {{ form_widget(userForm) }}
-        {{ form_row(form.username) }}
-        {{ form_row(form.password.first) }}
-        {{ form_row(form.password.second) }}
 
-        <button type="submit">Register!</button>
+        <button> Submit </button>
 
-
-        {{ form_end(userForm) }}
+        {{ form_start(userForm) }}
 
     </div>
 {% endblock %}
