--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,11 +5,24 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {% block stylesheets %}
+            <link rel="stylesheet" href="{{ asset('css/normalize.css') }}">
         {% endblock %}
 
         {% block javascripts %}
         {% endblock %}
     </head>
+
+    <nav>
+        {% block nav %}
+            <a href="{{ path('') }}">Admin</a>
+            <a href="{{ path('') }}">Campus</a>
+            <a href="{{ path('') }}">Accueil</a>
+            <a href="{{ path('') }}">Mon profil</a>
+            <a href="{{ path('') }}">Se deconnecter()</a>
+            <a href="{{ path('') }}">Connexion</a>
+        {% endblock %}
+    </nav>
+
     <body>
         {% block body %}{% endblock %}
     </body>
