--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,12 +14,21 @@
 
     <nav>
         {% block nav %}
-            <a href="{{ path('') }}">Admin</a>
-            <a href="{{ path('') }}">Campus</a>
-            <a href="{{ path('') }}">Accueil</a>
-            <a href="{{ path('') }}">Mon profil</a>
-            <a href="{{ path('') }}">Se deconnecter()</a>
-            <a href="{{ path('') }}">Connexion</a>
+            <a href="{{ path('list_main') }}">Accueil</a>
+
+            {% if app.user %}
+                <a href="{{ path('list_main') }}">Campus TODO</a>
+                <a href="{{ path('list_main') }}">Campus TODO</a>
+                <a href="{{ path('user_modifprofil') }}">Mon profil</a>
+                <a href="{{ path('app_logout') }}">Se deconnecter({{ app.user.pseudo }})</a>
+                
+                {% if app.user.roles[0] == 'ROLE_ADMIN' %}
+                    <a href="{{ path('list_main') }}">Admin TODO</a>
+                {% endif %}
+
+            {% else %}
+                <a href="{{ path('app_login') }}">Connexion</a>
+            {% endif %}
         {% endblock %}
     </nav>
 
