--- a/templates/Main/sortie.create.html.twig
+++ b/templates/Main/sortie.create.html.twig
@@ -10,13 +10,13 @@
 <body>
 
 <header>
-    <h1>Création d'une série</h1>
+    <h1>Création d'une sortie</h1>
 </header>
 
 <main>
     {{ form_start(sortieForm) }}
 
-    {{ form_widget(serieForm) }}
+    {{ form_widget(sortieForm) }}
 
     <button>Créer</button>
 
