--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,37 +1,59 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Log in!{% endblock %}
+{% block title %}Se connecter!{% endblock %}
 
 {% block body %}
-<form method="post">
-    {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
 
-    {% if app.user %}
-        <div class="mb-3">
-            You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
+<div class="login-container">
+    <form method="post" class="login-form">
+        {% if error %}
+            <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+        {% endif %}
+
+        {% if app.user %}
+            <div class="mb-3">
+                You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
+            </div>
+        {% endif %}
+        
+        <div class="dev-info">
+            La connexion est obligatoire.<br />
+            TODO delete:<br />
+            ADMIN -> login: a@a.a mdp: a<br />
+            USER -> login: un@un.un mdp: un (ou deux/trois/quatre a la place de 'un') <br />
         </div>
-    {% endif %}
 
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputMail">Mail</label>
-    <input type="text" value="{{ last_username }}" name="mail" id="inputMail" class="form-control" autocomplete="username" required autofocus>
-    <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+        <h1>S'identifier</h1>
 
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
+        <div class="input-group">
+            <label for="inputMail" class="big-label">Mail</label>
+            <input type="text" value="{{ last_username }}" name="mail" id="inputMail" class="form-control" autocomplete="username" required autofocus>
+        </div>
 
-    <div class="checkbox">
-        <label>
-            <input type="checkbox" id="remember_me" name="_remember_me"> Se souvenir de moi
-        </label>
-    </div>
+        <div class="input-group">
+            <label for="inputPassword" class="big-label">Password</label>
+            <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+        </div>
 
-    <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
-    </button>
-</form>
+            <input type="hidden" name="_csrf_token"
+                value="{{ csrf_token('authenticate') }}"
+            >
+
+            <div class="remember-forgot-group">
+                <div class="remember-me">
+                    <label>
+                        <input type="checkbox" id="remember_me" name="_remember_me"> Se souvenir de moi
+                    </label>
+                </div>
+
+                <a href="#" class="forgot-password">Mot de passe oublié</a>
+            </div>
+
+
+            <button class="login-button" type="submit">
+                Connexion
+            </button>
+        </div>
+    </form>
+</div>
 {% endblock %}
