--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,6 @@
 body {
     font-family: DMsans;
-    background: #f4f4f4;
+    background: #fefefe;
     margin: 0;
     padding: 0;
     display: flex;
@@ -12,95 +12,23 @@ body {
 }
 
 h1 {
-    color: #7ACFB0;
+    color: #7acfb0;
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
 }
 
-input[type="text"],
-input[type="password"] {
-    width: 300px;
-    padding: 10px;
-    padding-left: 20px;
-    padding-right: 20px;
-    margin-top: 6;
-
-    border: 4px solid #1C5588;
-    border-radius: 4px;
-    border-radius: 20px;
-}
-
-input[type="text"]:focus,
-input[type="password"]:focus {
-    outline: none;
-    border-color: #00BDC8;
-}
-
-label {
-    background: #fff;
-    padding: 0 5px;
+a {
     color: #1C5588;
-    flex: 1;
-    margin-right: 10px;
-}
-
-input[type="checkbox"] {
-    margin-right: 5px;
-}
-
-.big-label {
-    font-size: 30px;
-}
-
-.login-container {
-    background: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 500px;
-}
-
-.login-form {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
-
-.input-group {
-    display: flex;
-    align-items: center;
-    margin-bottom: 20px;
-}
-
-.remember-forgot-group {
-    margin-top: 10px;
-    display: flex;
-    justify-content: space-around;
-}
-
-.remember-me {
-    display: flex;
-    align-items: center;
-    margin-bottom: 20px;
-}
-
-.forgot-password {
-    color: #007bff;
-    text-decoration: none;
-    font-size: 0.9em;
+    text-decoration: underline;
     display: block;
 }
 
-.login-button {
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
-    background-color: #007bff;
-    color: white;
+button {
+    padding: 10px 40px;
+    border: solid 4px;
+    border-radius: 40px;
     cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-
-.login-button:hover {
-    background-color: #0056b3;
+    transition: border-color 0.3s ease;
+    transition: color 0.3s ease;
+    background-color: #fefefe;
 }
