--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,7 +5,6 @@ body {
     padding: 0;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     height: 100vh;
     color: #1C5588;
@@ -14,6 +13,7 @@ body {
 nav {
     display: flex;
     gap: 0.5em;
+    margin-bottom: 100px;
 }
 
 h1 {
