add general rul for td: align-text center

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -37,3 +37,8 @@ button {
     transition: color 0.3s ease;
     background-color: #fefefe;
 }
+
+td {
+    text-align: center;
+    padding: 5px;
+}
