--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,6 +20,7 @@
             <link rel="stylesheet" href="{{ asset('css/normalize.css') }}">
             <link rel="stylesheet" href="{{ asset('css/main.css') }}">
             <link rel="stylesheet" href="{{ asset('css/form.css') }}">
+            <link rel="stylesheet" href="{{ asset('css/list-sorties.css') }}">
         {% endblock %}
 
         {% block javascripts %}
