--- a/public/css/main.css
+++ b/public/css/main.css
@@ -43,7 +43,11 @@ button {
     background-color: #fefefe;
 }
 
+table {
+    margin-bottom: 50px;
+}
+
 td {
     text-align: center;
-    padding: 5px;
+    padding: 10px;
 }
