--- a/public/css/list-sorties.css
+++ b/public/css/list-sorties.css
@@ -1,3 +1,27 @@
+.filter-form {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 30px;
+    margin-bottom: 40px;
+}
+
 .td-align-left {
     text-align: left;
+}
+
+.h2-align-left {
+    margin: 0px;
+    align-self: flex-start;
+    margin-left: 50px;
+}
+
+.h2-align-right {
+    margin: 0px;
+    align-self: flex-end;
+    margin-right: 50px;
+}
+
+.container-filters-right {
+    display: flex;
+    flex-direction: column;
 }
