j'ai enfin réussi à afficher les participants d'une sortie omg pourquoi j'ai autant galéré rendez  moi mon C

--- a/templates/user/viewprofil.html.twig
+++ b/templates/user/viewprofil.html.twig
@@ -1,18 +1,16 @@
 {% extends 'base.html.twig'%}
 
     {% block stylesheets %}
-    <link rel="stylesheet" href="{{ asset'css/app.css' }}">
     {% endblock %}
 
 {%block body%}
 
-    <div>
+    user profile
 
 
 
-    </div>
 {% endblock %}
 
 {%  block title %}
-    Modifie User
+
 {%  endblock %}
