eod, affichage du créateur de la sortie non fonctionnel, tbc lundi

--- a/templates/user/viewprofil.html.twig
+++ b/templates/user/viewprofil.html.twig
@@ -5,12 +5,12 @@
 
 {%block body%}
 
-    user profile
-
+    {{ userId.nom }}
+    {{ userId.prenom }}
+    {{ userId.telephone }}
+    {{ userId.email }}
+    {{ userId.campus }}
 
 
 {% endblock %}
 
-{%  block title %}
-
-{%  endblock %}
