--- a/templates/Main/sortie.modifier.html.twig
+++ b/templates/Main/sortie.modifier.html.twig
@@ -5,12 +5,12 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Créer une sortie</title>
+    <title>Modifier la sortie</title>
 </head>
 <body>
 
 <header>
-    <h1>Création d'une sortie</h1>
+    <h1>Modifier une sortie</h1>
 </header>
 
 <main>
@@ -21,6 +21,8 @@
     <button>Enregistrer</button>
 
     <button>Publier la sortie</button>
+
+    <a href={{ path('') }} class="btn btn-link">Supprimer la sortie</a>
 
     <a href={{ path('') }} class="btn btn-link">Annuler</a>
 
