--- a/templates/Main/sortie.supprimer.html.twig
+++ b/templates/Main/sortie.supprimer.html.twig
@@ -5,26 +5,35 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Créer une sortie</title>
+    <title>Annuler une sortie</title>
 </head>
 <body>
 
 <header>
-    <h1>Création d'une sortie</h1>
+    <h1>Annuler une sortie</h1>
 </header>
 
 <main>
-    {{ form_start(sortieForm) }}
 
-    {{ form_widget(sortieForm) }}
+    <section>
+        <p>Nom de la sortie : {{ sortie.nom }}</p>
 
-    <button>Enregistrer</button>
+        <p>Date et heure de la sortie : {{ sortie.dateHeureDebut }}</p>
 
-    <button>Publier la sortie</button>
+        <p>Campus : {{ sortie.campus }}</p>
 
-    <a href={{ path('') }} class="btn btn-link">Annuler</a>
+        <p>Lieu : {{ sortie.lieu }}</p>
 
-    {{ form_end(sortieForm) }}
+
+
+    </section>
+
+    <section>
+
+
+
+    </section>
+
 </main>
 
 <footer>
