Corrections et avancées côté création de sortie.create.html.twig

--- a/templates/Main/sortie.afficher.html.twig
+++ b/templates/Main/sortie.afficher.html.twig
@@ -45,13 +45,13 @@
         <p>Longitude :</p>
     </section>
 
-    <section>
+    {# <section>
         {%  set tableauParticipants = { sortie.participants.} %}
         <p>Liste des participants inscrits : </p>
         {% for participant in sortie.participants %}
             <p>{{ sortie. }}</p>
         {% endfor %}
-    </section>
+    </section>#}
 
 </main>
 
