--- a/templates/Main/sortie.modifier.html.twig
+++ b/templates/Main/sortie.modifier.html.twig
@@ -22,9 +22,9 @@
 
     <button>Publier la sortie</button>
 
-    <a href={{ path('') }} class="btn btn-link">Supprimer la sortie</a>
+    {#<a href={{ path('') }} class="btn btn-link">Supprimer la sortie</a>
 
-    <a href={{ path('') }} class="btn btn-link">Annuler</a>
+    <a href={{ path('') }} class="btn btn-link">Annuler</a>#}
 
     {{ form_end(sortieForm) }}
 </main>
