Pages création et afficher opérationnelles (manque liste participants)

--- a/templates/Main/sortie.afficher.html.twig
+++ b/templates/Main/sortie.afficher.html.twig
@@ -1,30 +1,17 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Afficher une sortie</title>
-</head>
-<body>
+{% extends 'base.html.twig' %}
 
-<header>
-    <h1>Afficher une sortie</h1>
-</header>
-
-<main>
+{% block body %}
 
     <section>
         <p>Nom de la sortie : {{ sortie.nom }}</p>
 
-        <p>Date et heure de la sortie : {{ sortie.dateHeureDebut }}</p>
+        <p>Date et heure de la sortie : {{ sortie.dateHeureDebut | date }}</p>
 
-        <p>Date limite d'inscription : {{ sortie.dateLimiteInscription }}</p>
+        <p>Date limite d'inscription : {{ sortie.dateLimiteInscription | date }}</p> }
 
         <p>Nombre de places : {{ sortie.nbInscriptionsMax }}</p>
 
-        <p>Durée : {{ sortie.duree }}</p>
+        <p>Durée : {{ sortie.duree }} minutes</p>
 
         <p>Description et infos : {{ sortie.infosSortie }}</p>
     </section>
@@ -53,11 +40,4 @@
         {% endfor %}
     </section>#}
 
-</main>
-
-<footer>
-
-</footer>
-
-</body>
-</html>
+{% endblock %}
