working manual form to adduser

--- a/templates/admin/add_users.html.twig
+++ b/templates/admin/add_users.html.twig
@@ -6,6 +6,7 @@
     <div>
         <h2>Ajouter un utilisateur manuellement :</h2>
         {{ form_start(formManual) }}
+            {{ form_widget(formManual)}}
             <button type="submit">Ajouter</button>
         {{ form_end(formManual) }}
     </div>
