--- a/templates/Main/sortie.create.html.twig
+++ b/templates/Main/sortie.create.html.twig
@@ -3,15 +3,25 @@
 {% block body %}
     {{ form_start(sortieForm) }}
 
-    Ville de la sortie :
-    <select id="town_select">
-            <option value=""></option>
-        {% for town in towns %}
-            <option value="{{ town.id }}">{{ town.nom }}</option>
-        {% endfor %}
-    </select>
+        {{ form_row(sortieForm.nom) }}
+        {{ form_row(sortieForm.dateHeureDebut) }}
+        {{ form_row(sortieForm.duree) }}
+        {{ form_row(sortieForm.dateLimiteInscription) }}
+        {{ form_row(sortieForm.nbInscriptionsMax) }}
+        {{ form_row(sortieForm.infosSortie) }}
 
-    {{ form_widget(sortieForm) }}
+        <label for="town_select">Ville de la sortie :<label>
+        <select id="town_select" name="town_select">
+                <option value=""></option>
+            {% for town in towns %}
+                <option value="{{ town.id }}">{{ town.nom }}</option>
+            {% endfor %}
+        </select>
+
+        {{ form_row(sortieForm.lieu) }}
+        {{ form_row(sortieForm.Enregistrer) }}
+        {{ form_row(sortieForm.Publier_la_sortie) }}
+        {{ form_row(sortieForm.reset) }}
 
     {{ form_end(sortieForm) }}
 
@@ -33,7 +43,7 @@
             $('#town_select').change(function() {
                 var townId = $(this).val();
                 var url = $('#places-dropdown').data('url').replace('PLACEHOLDER', townId);
-                
+
                 if (townId) {
                     $.ajax({
                         url: url,
