--- a/templates/Main/sortie.modifier.html.twig
+++ b/templates/Main/sortie.modifier.html.twig
@@ -7,6 +7,6 @@
 
     {{ form_end(modifierForm) }}
 
-    <a href="{{ path('sortie_annuler', {'id': sortie.id}) }}"><button class="button-blue">Supprimer la sortie</button></a>}
+    <a href="{{ path('sortie_annuler', {'id': sortie.id}) }}"><button class="button-blue">Supprimer la sortie</button></a>
 
 {% endblock %}
