Dernières modifs (encore)

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -44,5 +44,11 @@
 
     <body>
         {% block body %}{% endblock %}
+
+        {% for message in app.flashes('success') %}
+            <div class="alert alert-success">
+                {{ message }}
+            </div>
+        {% endfor %}
     </body>
 </html>
