--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -35,7 +35,7 @@
             {% if app.user %}
                 <a href="{{ path('list_main') }}">Accueil</a>
                 <a href="{{ path('campus_main') }}">Campus</a>
-                <a href="{{ path('list_main') }}">Campus TODO</a>
+                <a href="{{ path('ville_main') }}">Ville</a>
                 <a href="{{ path('user_modifprofil') }}">Mon profil</a>
                 <a href="{{ path('app_logout') }}">Se deconnecter({{ app.user.pseudo }})</a>
 
