--- a/templates/Main/sortie.create.html.twig
+++ b/templates/Main/sortie.create.html.twig
@@ -10,7 +10,7 @@
         {{ form_row(sortieForm.nbInscriptionsMax) }}
         {{ form_row(sortieForm.infosSortie) }}
 
-        <label for="town_select">Ville de la sortie :<label>
+        <label for="town_select">Ville de la sortie :</label>
         <select id="town_select" name="town_select">
                 <option value=""></option>
             {% for town in towns %}
@@ -18,7 +18,11 @@
             {% endfor %}
         </select>
 
-        {{ form_row(sortieForm.lieu) }}
+        <div class="form-lieu-container" style="display: flex; flex-direction: row; gap: 50px; justify-content: space-between;">
+            {{ form_row(sortieForm.lieu) }}
+            <button type="button" class="button-blue" style="">Ajouter un lieu</button>
+        </div>
+        
         {{ form_row(sortieForm.Enregistrer) }}
         {{ form_row(sortieForm.Publier_la_sortie) }}
         {{ form_row(sortieForm.reset) }}
