reset Ville to 0 for simplicity after fetch localStorage

--- a/templates/Main/sortie.create.html.twig
+++ b/templates/Main/sortie.create.html.twig
@@ -91,6 +91,11 @@
                     }
                 }
 
+                var townSelect = document.getElementById('town_select');
+                if (townSelect) {
+                    townSelect.selectedIndex = 0;
+                }
+
                 localStorage.removeItem('meetupFormData');
             }
         });
